--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,8 +1,8 @@
 name: Cypress
-on: [pull_request]
+on: push
 env:
-  NODE_VERSION: '16'
-  PYTHON_VERSION: '3.7'
+  NODE_VERSION: "16"
+  PYTHON_VERSION: "3.7"
 
 permissions:
   contents: read
