--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,5 +1,5 @@
 name: Lint
-on: [pull_request]
+on: push
 
 permissions:
   contents: read
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.7'
+          python-version: "3.7"
       - name: Install requirements
         run: pip install flake8 pycodestyle
       - name: Check syntax
