--- a/.github/workflows/towncrier.yml
+++ b/.github/workflows/towncrier.yml
@@ -1,5 +1,5 @@
 name: Changelog entries
-on: [pull_request]
+on: push
 
 permissions:
   contents: read
@@ -13,8 +13,8 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.7'
-          cache: 'pip'
+          python-version: "3.7"
+          cache: "pip"
       - name: Install python deps
         run: pip install -r requirements.txt -r dev-requirements.txt -e.
 
