--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -59,4 +59,5 @@ jobs:
 
       - name: Deploy backend
         run: |-
-          kubectl set image deployment/ckan-dev ckan-dev="australia-southeast1-docker.pkg.dev/dsp-registry-410602/docker/ckan:${{steps.vars.outputs.sha_short}}"
+          kubectl set image deployment/ckan-dev ckan="australia-southeast1-docker.pkg.dev/dsp-registry-410602/docker/ckan:${{steps.vars.outputs.sha_short}}"
+          kubectl set image deployment/worker-dev worker="australia-southeast1-docker.pkg.dev/dsp-registry-410602/docker/ckan:${{steps.vars.outputs.sha_short}}"
