--- a/.github/workflows/dev-release.yaml
+++ b/.github/workflows/dev-release.yaml
@@ -37,12 +37,6 @@ jobs:
       - name: "Docker auth"
         run: gcloud auth configure-docker australia-southeast1-docker.pkg.dev
 
-      - uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
-        with:
-          cluster_name: garvan-data-hub-dev-gke
-          location: australia-southeast1-a
-          project_id: garvan-data-hub-dev
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -59,5 +53,6 @@ jobs:
 
       - name: Deploy backend
         run: |-
-          kubectl set image deployment/ckan-dev ckan="australia-southeast1-docker.pkg.dev/dsp-registry-410602/docker/ckan:${{steps.vars.outputs.sha_short}}"
-          kubectl set image deployment/worker-dev worker="australia-southeast1-docker.pkg.dev/dsp-registry-410602/docker/ckan:${{steps.vars.outputs.sha_short}}"
+          echo '${{ secrets.KUBE_CONFIG_DEV }}' > kube.yml
+          KUBECONFIG=kube.yml kubectl set image deployment/ckan-dev ckan="australia-southeast1-docker.pkg.dev/dsp-registry-410602/docker/ckan:${{steps.vars.outputs.sha_short}}"
+          KUBECONFIG=kube.yml kubectl set image deployment/worker-dev worker="australia-southeast1-docker.pkg.dev/dsp-registry-410602/docker/ckan:${{steps.vars.outputs.sha_short}}"
