--- a/docker/ckan-dev.ini.template
+++ b/docker/ckan-dev.ini.template
@@ -164,7 +164,7 @@ ckan.cors.origin_allow_all = false
 ckan.cors.origin_whitelist = 
 
 ## Plugins Settings ############################################################
-ckan.plugins = activity saml2auth datastore datatables_view hierarchy_display hierarchy_form xloader pages noanonaccess
+ckan.plugins = activity saml2auth datastore datatables_view hierarchy_display hierarchy_form xloader pages
 ckan.resource_proxy.timeout = 5
 ckanext.noanonaccess.allowed_paths = /user/login /user/saml2login /user/_logout /user/logged_out_redirect /sso/post
 ckanext.pages.editor = ckeditor
@@ -187,7 +187,7 @@ ckanext.saml2auth.user_email = email
 ckanext.saml2auth.idp_metadata.remote_cert = /home/tkallady/okta.cert
 ckanext.saml2auth.acs_endpoint = /sso/post
 ckanext.saml2auth.entity_id = {{SAML_ENTITY}}
-ckanext.saml2auth.enable_ckan_internal_login = False
+ckanext.saml2auth.enable_ckan_internal_login = True
 
 
 ## Front-End Settings ##########################################################
