--- a/docker/ckan-dev.ini.template
+++ b/docker/ckan-dev.ini.template
@@ -164,7 +164,7 @@ ckan.cors.origin_allow_all = false
 ckan.cors.origin_whitelist = 
 
 ## Plugins Settings ############################################################
-ckan.plugins = scheming_datasets activity saml2auth datastore datatables_view hierarchy_display hierarchy_form xloader pages
+ckan.plugins = scheming_datasets activity saml2auth datastore datatables_view hierarchy_display hierarchy_form xloader pages scheming_nerf_index
 ckan.resource_proxy.timeout = 5
 ckanext.noanonaccess.allowed_paths = /user/login /user/saml2login /user/_logout /user/logged_out_redirect /sso/post
 ckanext.pages.editor = ckeditor
