--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -6,7 +6,7 @@ permissions:
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v5
